Used headers and footers for layout
 * Changed the define names to be upper case to signify "public".
 * Mentioned "Go" on the about page.
 * Got rid of some of the blocks.

--- a/IrrduinoServerGo/server/tmpl/about.html
+++ b/IrrduinoServerGo/server/tmpl/about.html
@@ -1,29 +1,27 @@
-{{define "about"}}
-{% extends "layout.html" %}
+{{define "About"}}
+  {{template "LayoutHeader"}}
+    <p>
+      Irrduino Server provides on-demand watering controls and water use
+      reporting for a connected Irrduino sprinkler controller.
+    </p>
 
-{% block content %}
-  <p>
-    Irrduino Server provides on-demand watering controls and water use
-    reporting for a connected Irrduino sprinkler controller.
-  </p>
+    <p>This site is built using the following technologies:</p>
 
-  <p>This site is built using the following technologies:</p>
+    <ul>
+      <li>Go</li>
+      <li>Dart</li>
+      <li>Google App Engine</li>
+      <li>HTML5</li>
+      <li>Google Charting Tools</li>
+    </ul>
 
-  <ul>
-    <li>Python</li>
-    <li>Dart</li>
-    <li>Google App Engine</li>
-    <li>HTML5</li>
-    <li>Google Charting Tools</li>
-  </ul>
+    <p>
+      Project contributors:
+    </p>
 
-  <p>
-    Project contributors:
-  </p>
-
-  <ul>
-    <li>Joe Fernandez</li>
-    <li>JJ Behrens</li>
-  </ul>
-{% endblock %}
+    <ul>
+      <li>Joe Fernandez</li>
+      <li>JJ Behrens</li>
+    </ul>
+  {{template "LayoutFooter"}}
 {{end}}
