Pass the cursor when using "template"
 * Style.

--- a/IrrduinoServerGo/server/tmpl/about.html
+++ b/IrrduinoServerGo/server/tmpl/about.html
@@ -1,5 +1,5 @@
 {{define "About"}}
-  {{template "LayoutHeader"}}
+  {{template "LayoutHeader" .}}
     <p>
       Irrduino Server provides on-demand watering controls and water use
       reporting for a connected Irrduino sprinkler controller.
@@ -23,5 +23,5 @@
       <li>Joe Fernandez</li>
       <li>JJ Behrens</li>
     </ul>
-  {{template "LayoutFooter"}}
+  {{template "LayoutFooter" .}}
 {{end}}
