--- a/IrrduinoServerGo/server/tmpl/report.html
+++ b/IrrduinoServerGo/server/tmpl/report.html
@@ -1,5 +1,5 @@
 {{define "Report"}}
-  {{template "LayoutHeader"}}
+  {{template "LayoutHeader" .}}
     <script type=text/javascript src=https://www.google.com/jsapi></script>
     <script type=text/javascript>
       google.load("visualization", "1", {packages: ["corechart"]});
@@ -10,9 +10,9 @@
         data.addColumn('datetime', 'Date');
         {% for zone in zones %}
           data.addColumn('number',
-            '{{ .zone.1.location|html }}: {{ .zone.1.name|html }}');
+            '{{.zone.1.location|html}}: {{.zone.1.name|html}}');
         {% endfor %}
-        data.addRows({{ .water_usage_rows }});
+        data.addRows({{.water_usage_rows}});
         var options = {
           width: 800, height: 480,
           backgroundColor: '#d3f7a4',
@@ -31,7 +31,7 @@
         var data = new google.visualization.DataTable();
         data.addColumn('datetime', 'Date');
         data.addColumn('number', 'Cost');
-        data.addRows({{ .water_cost_rows }});
+        data.addRows({{.water_cost_rows}});
         var options = {
           width: 800, height: 480,
           backgroundColor: '#d3f7a4',
@@ -66,5 +66,5 @@
     </p>
 
     <div id="water-cost-chart"></div>
-  {{template "LayoutFooter"}}
+  {{template "LayoutFooter" .}}
 {{end}}
