Fixed the title

--- a/IrrduinoServerGo/server/tmpl/layout.html
+++ b/IrrduinoServerGo/server/tmpl/layout.html
@@ -2,7 +2,7 @@
   <!DOCTYPE html>
   <html lang=en>
     <head>
-      <title>{% block title %}Irrduino{% endblock %}</title>
+      <title>Irrduino Server</title>
       <link rel=stylesheet href=/static/css/layout.css type=text/css>
     </head>
 
